--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material/react-button": "^0.15.0",
+    "@material/react-material-icon": "^0.15.0",
+    "@material/react-select": "^0.15.0",
+    "@material/react-tab": "^0.15.0",
+    "@material/react-tab-bar": "^0.15.0",
+    "@material/react-text-field": "0.14.1",
+    "@material/react-top-app-bar": "^0.15.0",
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^5.7.2"
+    "react-hook-form": "^5.7.2",
+    "sass": "^1.26.5"
   }
 }
